# 2023-01-PCC104-UFOP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  utils.cpp  utils.h
01-exhaustive-search/: 01-exhaustive-search.cpp  01-exhaustive-search.h  01-exhaustive-search.md  01-presentation.md
02-decrease-and-conquer/: 02-decrease-and-conquer.cpp  02-decrease-and-conquer.h  02-decrease-and-conquer.md
02-divide-and-conquer/: 02-divide-and-conquer.cpp  02-divide-and-conquer.h  02-divide-and-conquer.md
03-divide-and-conquer/: 03-divide-and-conquer.cpp  03-divide-and-conquer.h  03-divide-and-conquer.md
04-dynamic-programming/: 04-dynamic-programming.cpp  04-dynamic-programming.h  fibonacci_numbers.txt
06-backtracking-algorithms/: 06-backtracking-algorithms.cpp  06-backtracking-algorithms.h
